[package]
name = "chuni-leap"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.30.0", features = ["persistence"] }
egui = { version = "0.30.0", features = ["log"] }
env_logger = "0.11.6"
glam = "0.28.0"
itertools = "0.14.0"
leaprs = { version = "0.2.2", features = ["glam"] }
log = { version = "0.4.25", features = ["std"] }
parking_lot = "0.12.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
